Fix overflow values content in about page

--- a/pages/about.css
+++ b/pages/about.css
@@ -343,6 +343,9 @@ a {
   .values-image img {
     width: 90vw;
   }
+  .values-content {
+    max-width: 90vw;
+  }
 }
 
 .nav-active {
